test_case/rust-lang_rust/54343_423705470_1.rs

|
18 | println!("{}", y); //~ ERROR borrow of moved value: y
|                   ^ value moved here in previous iteration of loop
|
